--- a/app/src/main/res/layout/activity_list_files.xml
+++ b/app/src/main/res/layout/activity_list_files.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
@@ -11,8 +12,7 @@
         android:layout_height="59dp"
         android:background="@android:drawable/ic_menu_save"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_marginEnd="19dp"
-        android:layout_above="@+id/listviewsd"
+        android:layout_marginEnd="41dp"
         android:layout_alignParentEnd="true" />
 
 
@@ -23,16 +23,18 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolbar2"
-        android:background="@color/NewColor" />
+        android:background="@color/NewColor"
+        />
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
