--- a/app/src/main/res/layout/layoutview.xml
+++ b/app/src/main/res/layout/layoutview.xml
@@ -13,13 +13,24 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:gravity="center_vertical"
-    android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-    android:textAlignment="viewStart"
-    android:textAppearance="?android:attr/textAppearanceListItem"
-    android:textColor="@android:color/background_dark" />
+    android:orientation="horizontal"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/listImage"
+        android:layout_width="66dp"
+        android:layout_height="match_parent"/>
+
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/fileItem"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/listPreferredItemHeight"
+        android:gravity="center_vertical"
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:text="FileNames"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+</LinearLayout>
