--- a/app/src/main/res/layout/activity_list_files.xml
+++ b/app/src/main/res/layout/activity_list_files.xml
@@ -20,10 +20,10 @@
         android:id="@+id/listviewsd"
         android:layout_width="wrap_content"
         android:layout_height="475dp"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/toolbar2"
         android:background="@color/NewColor"
-        />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar2" />
 
 
     <android.support.v7.widget.Toolbar
